--- a/.github/workflows/manual_action_greetings.yml
+++ b/.github/workflows/manual_action_greetings.yml
@@ -12,7 +12,7 @@ on:
         # Friendly description to be shown in the UI instead of 'name'
         description: 'A greeting passed from the caller workflow'
         # Default value if no value is explicitly provided
-        default: 'Good morning ${{ github.actor}}'
+        default: 'Good morning'
         # Input has to be provided for the workflow to run
         required: true
         # The data type of the input
@@ -29,4 +29,4 @@ jobs:
     steps:
     # Runs a single command using the runners shell
     - name: Print the value of inputs.name to STDOUT
-      run: echo "${{ inputs.name }}"
+      run: echo "${{ inputs.name }} ${{github.actor}}"
