--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,9 @@ on:
         - prod
 
 name: Azure Bicep-Advanced
+permissions:
+      id-token: write
+      contents: read
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
